clang/test/BSC/Negative/Ownership/RuleCheck/own_borrow_conflict_typedef/own_borrow_conflict_typedef.cbs
// RUN: %clang_cc1 -verify %s

typedef int *owned borrow InvalidPtr; // expected-error {{cannot combine 'owned' and 'borrow' qualifiers on the same type}}
typedef Invalid = int *owned borrow; // expected-error {{cannot combine 'owned' and 'borrow' qualifiers on the same type}}


void demo() {
    InvalidPtr p = nullptr;
}
void demo1() {
    Invalid p = nullptr;
}